Projeto Pet-Online - Atualização
Atualização do projeto, integrando banco de dados para contato e reserva de banhos dos Pets.

--- a/base/templates/contato.html
+++ b/base/templates/contato.html
@@ -10,7 +10,7 @@
 </p>
 {% if sucesso %}
 <p class="alert alert-success">Mensagem enviada com sucesso!</p>
-{% endif %}
+{% else %}
 <form action="" method="post" novalidate>
   {% csrf_token %}
   <!--Esse Tagtemplate busca o formulario criado no bootstrap-->
@@ -19,4 +19,5 @@
   <hr>
   <button type="submit" class="btn btn-primary">Enviar Mensagem </button> 
 </form>
+{% endif %}
 {% endblock %}
