--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -30,10 +30,21 @@
  </head>
  <body>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
-        <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-          <a href="{% url 'inicio' %}" class="d-flex align-items-center text-dark text-decoration-none">
-                <span class="fs-4">Pet online</span>
-          </a>
+        <header class="d-flex justify-content-center py-3 border-bottom">
+          <ul class="nav nav-pills">
+            <li class="nav-item"><a href="{% url 'inicio' %}" class="nav-link text-dark">
+              <span class="fs-4">Pet online</span>
+            </a></li>
+            <li class="nav-item"><a href="{% url 'contato' %}" class="nav-link text-dark">
+              <span class="fs-4">Entre em Contato</span>
+            </a></li>
+            <li class="nav-item"><a href="" class="nav-link text-dark">
+              <span class="fs-4">Reservar Banho</span>
+            </a></li>
+
+            
+            
+        </ul>
         </header>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
         <main>
@@ -42,7 +53,7 @@
             <h1>Reserve já o banho do seu Pet</h1>
             <ul>
               <li><a href="{% url 'contato' %}">Formulário de contato</a></li>
-              <li><a href="{% url 'reserva' %}">Reservar Horário</a></li>
+              <li><a href="{% url 'reserva:criar_reserva'%}" class="btn btn-primary">Reservar Horário</a></li>
             </ul>
             
           {% endblock %}
