--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -30,30 +30,41 @@
  </head>
  <body>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
-        <header class="d-flex justify-content-center py-3 border-bottom">
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{% url 'inicio' %}" class="nav-link text-dark">
+      <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a href="{% url 'inicio' %}" class="nav-link active" aria-current="page">
               <span class="fs-4">Pet online</span>
             </a></li>
-            <li class="nav-item"><a href="{% url 'contato' %}" class="nav-link text-dark">
-              <span class="fs-4">Entre em Contato</span>
-            </a></li>
-            <li class="nav-item"><a href="" class="nav-link text-dark">
-              <span class="fs-4">Reservar Banho</span>
-            </a></li>
+              
+            
+          {% if user.is_authenticated %}
+            <a href="{% url 'logout_usuario' %}" class="nav-link">
+              <span class="fs-4">Logout</span>
+            </a>
+          
 
-            
-            
-        </ul>
+          {% else %}
+            <a href="{% url 'login_usuario' %}" class="nav-link">
+              <span class="fs-4">Login</span>
+           </a>
+           <a href="{% url 'novo_usuario' %}" class=" nav-link">
+            <span class="fs-4">Cadastrar-se</span>
+         </a>
+
+          {% endif %}
+          
+            </ul>
         </header>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
         <main>
           <!--Criando uma herança de estrutura para redundancia nas proximas paginas-->
           {% block principal %}
             <h1>Reserve já o banho do seu Pet</h1>
-            <ul>
-              <li><a href="{% url 'contato' %}">Formulário de contato</a></li>
-              <li><a href="{% url 'reserva:criar_reserva'%}" class="btn btn-primary">Reservar Horário</a></li>
+            <ul class="list-group">
+              <li class="list-group-item list-group-item-action"><a href="{% url 'reserva:criar_reserva'%}" class="nav-link">Reservar Horário</a></li>
+              <li class="list-group-item list-group-item-action"><a href="{% url 'contato'%}" class="nav-link">Contato</a></li>
             </ul>
             
           {% endblock %}
