Atualização projeto - Pet-Online
Criação de API Views para POST e GET de novas reservas e novos contatos.

--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -55,6 +55,11 @@
 
           {% endif %}
           
+          <a href="{% url 'api:contatos' %}" class="nav-link">
+            <span class="fs-4">API</span>
+          </a>
+        
+
             </ul>
         </header>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
