--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -4,7 +4,9 @@
 {% block principal %}
 
     <h1> Login </h1>
-
+    {% if erro %}
+    <p class="alert alert-danger"> {{ erro }}</p>
+    {% endif %}
         <form action="" method="post" novalidate>
             {% csrf_token %}
             {% bootstrap_form formulario %}
