--- a/base/templates/api_disp.html
+++ b/base/templates/api_disp.html
@@ -6,7 +6,7 @@
 <h1>Selecione uma Api </h1>
 <ul class="list-group">
   <li class="list-group-item list-group-item-action"><a href="agenda" class="nav-link">Api - Reserva</a></li>
-  <li class="list-group-item list-group-item-action"><a href="reserva-detail" class="nav-link">Api - Local e Reserva</a></li>
+  <li class="list-group-item list-group-item-action"><a href="petshop" class="nav-link">Api - Local e Reserva</a></li>
   <li class="list-group-item list-group-item-action"><a href="contato" class="nav-link">Api - Contatos</a></li>
   <li class="list-group-item list-group-item-action"><a href="agenda-porte" class="nav-link">Api - Reserva e Porte</a></li>
 </ul>
