--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -34,23 +34,23 @@
 
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="{% url 'inicio' %}" class="nav-link active" aria-current="page">
-              <span class="fs-4">Pet online</span>
+            <a href="{% url 'inicio' %}" class="nav-link" aria-current="page">
+              <span class="fs-4">PET ONLINE</span>
             </a></li>
               
             
           {% if user.is_authenticated %}
             <a href="{% url 'logout_usuario' %}" class="nav-link">
-              <span class="fs-4">Logout</span>
+              <span class="fs-4">LOGOUT</span>
             </a>
           
 
           {% else %}
             <a href="{% url 'login_usuario' %}" class="nav-link">
-              <span class="fs-4">Login</span>
+              <span class="fs-4">LOGIN</span>
            </a>
            <a href="{% url 'novo_usuario' %}" class=" nav-link">
-            <span class="fs-4">Cadastrar-se</span>
+            <span class="fs-4">CADASTRAR-SE</span>
          </a>
 
           {% endif %}
@@ -72,7 +72,7 @@
           {% block principal %}
             <h1>Reserve já o banho do seu Pet</h1>
             <ul class="list-group">
-              <li class="list-group-item list-group-item-action"><a href="{% url 'reserva'%}" class="nav-link">Reservar Horário</a></li>
+              <li class="list-group-item list-group-item-action"><a href="{% url 'criar'%}" class="nav-link">Reservar Horário</a></li>
               <li class="list-group-item list-group-item-action"><a href="{% url 'contato'%}" class="nav-link">Contato</a></li>
             </ul>
             
