--- a/reserva/templates/criar_reserva.html
+++ b/reserva/templates/criar_reserva.html
@@ -3,7 +3,7 @@
 {% block principal%}
 <h1>Faça sua reserva</h1>
 {% if sucesso %}
-<p class="alert alert-success"> Reserva realizada com sucesso, embreve entraremos em contato !</p>
+<p class="alert alert-success">Reserva realizada com sucesso</p>
 {% else %}
 <form action="" method="post">
     {% csrf_token %}
