--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -32,40 +32,47 @@
     <div class="col-lg-8 mx-auto p-3 py-md-5">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
 
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a href="{% url 'inicio' %}" class="nav-link" aria-current="page">
-              <span class="fs-4">PET ONLINE</span>
+        <ul class="nav nav-tabs">
+          <li class="nav-item" >
+            <a class="nav-link active"  href="{% url 'inicio' %}">
+              PET ONLINE
             </a></li>
               
             
           {% if user.is_authenticated %}
-            <a href="{% url 'logout_usuario' %}" class="nav-link">
-              <span class="fs-4">LOGOUT</span>
-            </a>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" href="{% url 'logout_usuario' %}">
+              LOGOUT
+            </a></li>
           
 
           {% else %}
-            <a href="{% url 'login_usuario' %}" class="nav-link">
-              <span class="fs-4">LOGIN</span>
-           </a>
-           <a href="{% url 'novo_usuario' %}" class=" nav-link">
-            <span class="fs-4">CADASTRAR-SE</span>
-         </a>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" href="{% url 'login_usuario' %}" >
+              LOGIN
+           </a></li>
+
+          <li class="nav-item" role="presentation">
+           <a class="nav-link active" href="{% url 'novo_usuario' %}" >
+            CADASTRAR-SE
+         </a></li>
 
           {% endif %}
+          <li class="nav-item" role="presentation">
+          <a class="nav-link active" href="{% url 'api' %}" >
+            API
+          </a></li>
           
-          <a href="{% url 'api' %}" class="nav-link">
-            <span class="fs-4">API</span>
-          </a>
-          
-          <a href="http://127.0.0.1:8000/admin/" class="nav-link">
-            <span class="fs-4">ADM - PET</span>
-          </a>
-        
+          <li class="nav-item" role="presentation">
+          <a class="nav-link active" href="http://127.0.0.1:8000/admin/">
+            ADM - PET
+          </a></li>
+      
+        </ul>
+      </header> 
+    </div>
+       
 
-            </ul>
-        </header>
     <div class="col-lg-8 mx-auto p-3 py-md-5">
         <main>
           <!--Criando uma herança de estrutura para redundancia nas proximas paginas-->
