--- a/base/templates/inicio.html
+++ b/base/templates/inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Online - Reserve já o banho do seu Pet</title>
+    <title>Mundo Pet</title>
 </head>
    <!-- Bootstrap core CSS -->
    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -29,46 +29,60 @@
    <link href="/static/css/starter-template.css" rel="stylesheet">
  </head>
  <body>
-    <div class="col-lg-8 mx-auto p-3 py-md-5">
+    <div  class="col-lg-8 mx-auto p-3 py-md-5">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-
-        <ul class="nav nav-tabs">
+      
+        <ul class="nav nav-justify-content-center">
           <li class="nav-item" >
-            <a class="nav-link active"  href="{% url 'inicio' %}">
-              PET ONLINE
+            <a class="nav-link active" href="{% url 'inicio' %}">
+             <img class="align-baseline" src="/static/imagens/logo-pet.jpeg" alt="logo-pet" width="63px" height="30px">
             </a></li>
               
             
           {% if user.is_authenticated %}
           <li class="nav-item" role="presentation">
-            <a class="nav-link active" href="{% url 'logout_usuario' %}">
-              LOGOUT
+            <a class="nav-link" class="btn btn-primary" href="{% url 'logout_usuario' %}">
+             <span class="fw-bold" > LOGOUT </span>
             </a></li>
           
 
           {% else %}
           <li class="nav-item" role="presentation">
-            <a class="nav-link active" href="{% url 'login_usuario' %}" >
-              LOGIN
+           <a class="nav-link" href="{% url 'login_usuario' %}" >
+            <span class="fw-bold"> LOGIN </span>
            </a></li>
 
           <li class="nav-item" role="presentation">
-           <a class="nav-link active" href="{% url 'novo_usuario' %}" >
-            CADASTRAR-SE
-         </a></li>
+           <a class="nav-link" href="{% url 'novo_usuario' %}" >
+            <span class="fw-bold"> CADASTRAR-SE </span>
+           </a></li>
 
           {% endif %}
           <li class="nav-item" role="presentation">
-          <a class="nav-link active" href="{% url 'api' %}" >
-            API
-          </a></li>
+           <a class="nav-link" href="{% url 'api' %}" >
+            <span class="fw-bold"> API </span>
+           </a></li>
           
           <li class="nav-item" role="presentation">
-          <a class="nav-link active" href="http://127.0.0.1:8000/admin/">
-            ADM - PET
+           <a class="nav-link" href="http://127.0.0.1:8000/admin/" >
+           <span class="fw-bold"> ADM - PET </span>
           </a></li>
-      
+
+         
         </ul>
+
+        {% if user.is_authenticated %} 
+        <svg  xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-check-fill" viewBox="0 0 16 16">
+           <path fill-rule="evenodd" d="M15.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0"/>
+           <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+        </svg>
+        
+        {% else %}
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="26" fill="currentColor" class="bi bi-person-fill-slash" viewBox="0 0 16 16">
+          <path d="M13.879 10.414a2.501 2.501 0 0 0-3.465 3.465zm.707.707-3.465 3.465a2.501 2.501 0 0 0 3.465-3.465m-4.56-1.096a3.5 3.5 0 1 1 4.949 4.95 3.5 3.5 0 0 1-4.95-4.95ZM11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4"/>
+        </svg>
+        {% endif %}
+        
       </header> 
     </div>
        
@@ -77,7 +91,7 @@
         <main>
           <!--Criando uma herança de estrutura para redundancia nas proximas paginas-->
           {% block principal %}
-            <h1>Reserve já o banho do seu Pet</h1>
+            <h1 class="text-center">FAÇA SUA RESERVA</h1>
             <ul class="list-group">
               <li class="list-group-item list-group-item-action"><a href="{% url 'criar'%}" class="nav-link">Reservar Horário</a></li>
               <li class="list-group-item list-group-item-action"><a href="{% url 'contato'%}" class="nav-link">Contato</a></li>
