Alterações na API e Templates

--- a/base/templates/api_disp.html
+++ b/base/templates/api_disp.html
@@ -5,10 +5,22 @@
 
 <h1 class="text-center">NAVEGUE POR NOSSAS API'S</h1>
 <ul class="list-group">
-  <li class="list-group-item list-group-item-action"><a href="agenda" class="nav-link">Api - Reserva</a></li>
-  <li class="list-group-item list-group-item-action"><a href="petshop" class="nav-link">Api - Local e Reserva</a></li>
-  <li class="list-group-item list-group-item-action"><a href="contato" class="nav-link">Api - Contatos</a></li>
-  <li class="list-group-item list-group-item-action"><a href="agenda-porte" class="nav-link">Api - Reserva e Porte</a></li>
+  <li class="list-group-item list-group-item-action"><a href="agenda" class="nav-link">
+    <span class="fw-bold"> Api - Reserva </span>
+  </a>
+   </li>
+  <li class="list-group-item list-group-item-action"><a href="petshop" class="nav-link">
+    <span class="fw-bold"> Api - Local e Reserva</span>
+   </a>
+  </li>
+  <li class="list-group-item list-group-item-action"><a href="contato" class="nav-link">
+    <span class="fw-bold"> Api - Contatos</span>
+   </a>
+  </li>
+  <li class="list-group-item list-group-item-action"><a href="agenda-porte" class="nav-link">
+    <span class="fw-bold"> Api - Reserva e Porte</span>
+   </a>
+  </li>
 </ul>
 
 {% endblock %}
