--- a/base/templates/login.html
+++ b/base/templates/login.html
@@ -3,7 +3,7 @@
 
 {% block principal %}
 
-    <h1> Login </h1>
+    <h2 class="text-center"> Login </h2>
     {% if erro %}
     <p class="alert alert-danger"> {{ erro }}</p>
     {% endif %}
